[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/UI/Carnet/Font/Font_CorpsTexte.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Debug.gd" type="Script" id=2]

[node name="DebugPanel" type="MarginContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -360.0
margin_bottom = 271.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 350.0
margin_bottom = 282.0

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 350.0
margin_bottom = 282.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 330.0
margin_bottom = 262.0

[node name="CB_Graines" type="CheckBox" parent="MarginContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.231373, 0.803922, 0.509804, 1 )
text = "Toutes les graines"

[node name="CB_DebugPannel" type="CheckBox" parent="MarginContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 320.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.231373, 0.803922, 0.509804, 1 )
text = "Panneau Debug Visible"

[node name="CB_Camera" type="CheckBox" parent="MarginContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 320.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.231373, 0.803922, 0.509804, 1 )
text = "Camera lerp (pas au point)"

[node name="MarginContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 320.0
margin_bottom = 136.0

[node name="SetPA" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer4"]
margin_right = 76.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.231373, 0.803922, 0.509804, 1 )
text = "set_PA :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newPA" type="LineEdit" parent="MarginContainer/VBoxContainer/MarginContainer4"]
margin_left = 80.0
margin_right = 138.0
margin_bottom = 25.0

[node name="MarginContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 320.0
margin_bottom = 165.0

[node name="zoom" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer3"]
margin_right = 68.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.231373, 0.803922, 0.509804, 1 )
text = "Zoom : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider2" type="HSlider" parent="MarginContainer/VBoxContainer/MarginContainer3"]
margin_left = 72.0
margin_right = 320.0
margin_bottom = 16.0
size_flags_horizontal = 7
min_value = 0.1
max_value = 5.0
step = 0.1
value = 2.0
scrollable = false

[node name="MarginContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 169.0
margin_right = 320.0
margin_bottom = 194.0

[node name="PlayerSopd " type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2"]
margin_right = 122.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.231373, 0.803922, 0.509804, 1 )
text = "Player_Spd : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MarginContainer2"]
margin_left = 126.0
margin_right = 320.0
margin_bottom = 16.0
size_flags_horizontal = 7
max_value = 900.0
step = 50.0
value = 300.0
rounded = true
scrollable = false

[node name="PlanteLvl" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 320.0
margin_bottom = 223.0

[node name="plLvl" type="Label" parent="MarginContainer/VBoxContainer/PlanteLvl"]
margin_right = 94.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.231373, 0.803922, 0.509804, 1 )
text = "Plante_lvl"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/PlanteLvl"]
margin_left = 98.0
margin_right = 172.0
margin_bottom = 25.0
min_value = 1.0
max_value = 3.0
value = 1.0
rounded = true

[node name="MarginContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 227.0
margin_right = 320.0
margin_bottom = 252.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 121.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.231373, 0.803922, 0.509804, 1 )
text = "Aller au jour :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 125.0
margin_right = 183.0
margin_bottom = 25.0
[connection signal="pressed" from="MarginContainer/VBoxContainer/CB_Graines" to="." method="_on_CB_Graines_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/CB_DebugPannel" to="." method="_on_CB_DebugPannel_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/CB_Camera" to="." method="_on_CB_Camera_toggled"]
[connection signal="text_entered" from="MarginContainer/VBoxContainer/MarginContainer4/newPA" to="." method="_on_newPA_text_entered"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MarginContainer3/HSlider2" to="." method="_on_HSlider2_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MarginContainer2/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/PlanteLvl/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="text_entered" from="MarginContainer/VBoxContainer/MarginContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
